--- a/nodes/uos-config.html
+++ b/nodes/uos-config.html
@@ -3,10 +3,13 @@
   RED.nodes.registerType('uos-config', {
     category: 'config',
     defaults: {
+      name: { value: "" },
       host: { value: '127.0.0.1', required: true },
-      port: { value: 49360, required: true, validate: RED.validators.number() },
-      clientName: { value: '', required: true }, // No default, required
+      port: { value: 4222, required: true, validate: RED.validators.number() },
+      clientName: { value: 'nodered' },
       scope: { value: FIXED_SCOPE, required: true },
+      enableSystemAdmin: { value: false },
+      customScopes: { value: "" }
     },
     credentials: {
       clientId: { type: 'text', required: true },
@@ -141,6 +144,19 @@
     <label for="node-config-input-clientSecret"><i class="fa fa-key"></i> Client Secret</label>
     <input type="password" id="node-config-input-clientSecret">
   </div>
+
+    <!-- Advanced Scopes Section -->
+    <div class="form-row">
+        <label for="node-config-input-enableSystemAdmin" style="width: auto;"><i class="fa fa-lock"></i> Enable System Admin Access</label>
+        <input type="checkbox" id="node-config-input-enableSystemAdmin" style="display: inline-block; width: auto; vertical-align: top;">
+        <div class="form-tips" style="margin-top: 5px;">
+            Grants permission to manage System, Network, Security, Logs, and Recovery.
+        </div>
+    </div>
+    <div class="form-row">
+        <label for="node-config-input-customScopes"><i class="fa fa-plus-circle"></i> Custom Scopes</label>
+        <input type="text" id="node-config-input-customScopes" placeholder="space-separated scopes">
+    </div>
   <input type="hidden" id="node-config-input-scope">
   <div class="form-row">
     <label><i class="fa fa-list"></i> Scope</label>
