--- a/nodes/uos-api.html
+++ b/nodes/uos-api.html
@@ -1,105 +1,104 @@
-<script type="text/javascript">
-    RED.nodes.registerType('uos-api', {
-        category: 'Web Services',
-        color: '#FFCC66',
-        defaults: {
-            name: { value: "" },
-            uosConfig: { type: "uos-config", required: true },
-            mode: { value: "datahub" },
+RED.nodes.registerType('uos-api', {
+category: 'Weidmueller DataHub',
+color: '#FFCC66',
+defaults: {
+name: { value: "" },
+uosConfig: { type: "uos-config", required: true },
+mode: { value: "datahub" },
 
-            // DataHub
-            dhAction: { value: "read" },
-            dhProvider: { value: "" },
-            dhVariable: { value: "" },
+// DataHub
+dhAction: { value: "read" },
+dhProvider: { value: "" },
+dhVariable: { value: "" },
 
-            // System
-            sysCategory: { value: "system" },
-            sysAction: { value: "info" }
-        },
-        inputs: 1,
-        outputs: 1,
-        icon: "uos-api.svg",
-        label: function () {
-            return this.name || "u-OS API";
-        },
-        oneditprepare: function () {
-            $("#node-input-mode").on("change", function () {
-                var mode = $(this).val();
-                if (mode === "datahub") {
-                    $(".uos-mode-datahub").show();
-                    $(".uos-mode-system").hide();
-                    $("#node-input-dhAction").change(); // Trigger redraw of vars
-                } else {
-                    $(".uos-mode-datahub").hide();
-                    $(".uos-mode-system").show();
-                }
-            });
+// System
+sysCategory: { value: "system" },
+sysAction: { value: "info" }
+},
+inputs: 1,
+outputs: 1,
+icon: "uos-api.svg",
+label: function () {
+return this.name || "u-OS API";
+},
+oneditprepare: function () {
+$("#node-input-mode").on("change", function () {
+var mode = $(this).val();
+if (mode === "datahub") {
+$(".uos-mode-datahub").show();
+$(".uos-mode-system").hide();
+$("#node-input-dhAction").change(); // Trigger redraw of vars
+} else {
+$(".uos-mode-datahub").hide();
+$(".uos-mode-system").show();
+}
+});
 
-            // DataHub Action UI refinements
-            $("#node-input-dhAction").on("change", function () {
-                var action = $(this).val();
-                if (action === "list_providers") {
-                    $("#node-input-dhProvider").parent().hide();
-                    $("#node-input-dhVariable").parent().hide();
-                } else if (action === "list_variables") {
-                    $("#node-input-dhProvider").parent().show();
-                    $("#node-input-dhVariable").parent().hide();
-                } else {
-                    $("#node-input-dhProvider").parent().show();
-                    $("#node-input-dhVariable").parent().show();
-                }
-            });
+// DataHub Action UI refinements
+$("#node-input-dhAction").on("change", function () {
+var action = $(this).val();
+if (action === "list_providers") {
+$("#node-input-dhProvider").parent().hide();
+$("#node-input-dhVariable").parent().hide();
+} else if (action === "list_variables") {
+$("#node-input-dhProvider").parent().show();
+$("#node-input-dhVariable").parent().hide();
+} else {
+$("#node-input-dhProvider").parent().show();
+$("#node-input-dhVariable").parent().show();
+}
+});
 
-            // System Action Dynamic Options
-            const sysActions = {
-                system: [
-                    { val: "info", label: "Get System Info (Model, CPU, Version)" },
-                    { val: "nameplate", label: "Get Digital Nameplate (Serial, etc.)" },
-                    { val: "disks", label: "Get Disk Usage" },
-                    { val: "reboot", label: "Reboot System [POST]" }
-                ],
-                network: [
-                    { val: "get_state", label: "Get Network State (IPs)" },
-                    { val: "get_config", label: "Get Network Config (Settings)" },
-                    { val: "set_config", label: "Set Network Config (PUT)" },
-                    { val: "update_config", label: "Update Network Config (PATCH)" }
-                ],
-                logging: [
-                    { val: "entries", label: "Get Log Entries" },
-                    { val: "sources", label: "Get Log Sources" },
-                    { val: "create_report", label: "Create Log Report [POST]" }
-                ],
-                security: [
-                    { val: "get_config", label: "Get Security Config (Root Access)" },
-                    { val: "set_config", label: "Set Security Config (PUT)" }
-                ],
-                recovery: [
-                    { val: "factory_reset", label: "Factory Reset [POST]" }
-                ]
-            };
+// System Action Dynamic Options
+const sysActions = {
+system: [
+{ val: "info", label: "Get System Info (Model, CPU, Version)" },
+{ val: "nameplate", label: "Get Digital Nameplate (Serial, etc.)" },
+{ val: "disks", label: "Get Disk Usage" },
+{ val: "reboot", label: "Reboot System [POST]" }
+],
+network: [
+{ val: "get_state", label: "Get Network State (IPs)" },
+{ val: "get_config", label: "Get Network Config (Settings)" },
+{ val: "set_config", label: "Set Network Config (PUT)" },
+{ val: "update_config", label: "Update Network Config (PATCH)" }
+],
+logging: [
+{ val: "entries", label: "Get Log Entries" },
+{ val: "sources", label: "Get Log Sources" },
+{ val: "create_report", label: "Create Log Report [POST]" }
+],
+security: [
+{ val: "get_config", label: "Get Security Config (Root Access)" },
+{ val: "set_config", label: "Set Security Config (PUT)" }
+],
+recovery: [
+{ val: "factory_reset", label: "Factory Reset [POST]" }
+]
+};
 
-            $("#node-input-sysCategory").on("change", function () {
-                var cat = $(this).val();
-                var actions = sysActions[cat] || [];
-                var select = $("#node-input-sysAction");
-                select.empty();
-                actions.forEach(function (a) {
-                    select.append($("<option></option>").attr("value", a.val).text(a.label));
-                });
+$("#node-input-sysCategory").on("change", function () {
+var cat = $(this).val();
+var actions = sysActions[cat] || [];
+var select = $("#node-input-sysAction");
+select.empty();
+actions.forEach(function (a) {
+select.append($("<option></option>").attr("value", a.val).text(a.label));
+});
 
-                // If the current sysAction value is not valid for this category, reset it
-                const currentVal = $("#node-input-sysAction").val();
-                let found = false;
-                actions.forEach(action => { if (action.val === currentVal) found = true; });
+// If the current sysAction value is not valid for this category, reset it
+const currentVal = $("#node-input-sysAction").val();
+let found = false;
+actions.forEach(action => { if (action.val === currentVal) found = true; });
 
-                if (!found && actions.length > 0) {
-                    $("#node-input-sysAction").val(actions[0].val);
-                } else if (found) {
-                    $("#node-input-sysAction").val(currentVal);
-                }
-            });
-        }
-    });
+if (!found && actions.length > 0) {
+$("#node-input-sysAction").val(actions[0].val);
+} else if (found) {
+$("#node-input-sysAction").val(currentVal);
+}
+});
+}
+});
 </script>
 
 <script type="text/html" data-template-name="uos-api">
