style(1.4.7): unified node colors and simplified palette labels

--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -13,6 +13,7 @@
     },
     inputs: 1,
     outputs: 1,
+    paletteLabel: 'Read',
     icon: "datahub-read.svg",
     label: function () {
       if (this.name) return this.name;
