--- a/nodes/uos-api.html
+++ b/nodes/uos-api.html
@@ -1,6 +1,7 @@
 RED.nodes.registerType('uos-api', {
 category: 'Weidmueller DataHub',
-color: '#FFCC66',
+color: '#ff9900',
+paletteLabel: 'u-OS',
 defaults: {
 name: { value: "" },
 uosConfig: { type: "uos-config", required: true },
