--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -95,7 +95,7 @@
     label: function () {
       return this.name || `DataHub - Provider ${this.providerId || ''}`;
     },
-    paletteLabel: "DataHub - Provider",
+    paletteLabel: "Provider",
     labelStyle: function () {
       return this.name ? 'node_label_italic' : '';
     }
