--- a/nodes/datahub-write.html
+++ b/nodes/datahub-write.html
@@ -11,6 +11,7 @@
         },
         inputs: 1,
         outputs: 1,
+        paletteLabel: 'Write',
         icon: "datahub-write.svg",
         align: "right",
         label: function () {
