style(1.4.11): simplify node labels (Read, Write, Provider, u-OS)

--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -17,7 +17,7 @@
     icon: "datahub-read.svg",
     label: function () {
       if (this.name) return this.name;
-      return this.providerId || "DataHub - Read";
+      return this.providerId || "Read";
     },
     paletteLabel: "DataHub - Read",
     oneditprepare: function () {
