--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -93,7 +93,7 @@
       }
     },
     label: function () {
-      return this.name || `DataHub - Provider ${this.providerId || ''}`;
+      return this.name || `Provider ${this.providerId || ''}`;
     },
     paletteLabel: "Provider",
     labelStyle: function () {
