--- a/nodes/datahub-write.html
+++ b/nodes/datahub-write.html
@@ -15,7 +15,7 @@
         icon: "datahub-write.svg",
         align: "right",
         label: function () {
-            return this.name || this.providerId || "DataHub - Write";
+            return this.name || this.providerId || "Write";
         },
         paletteLabel: "DataHub - Write",
         oneditprepare: function () {
