--- a/nodes/uos-api.html
+++ b/nodes/uos-api.html
@@ -21,7 +21,7 @@
         outputs: 1,
         icon: "uos-api.svg",
         label: function () {
-            return this.name || "u-OS API";
+            return this.name || "u-OS";
         },
         oneditprepare: function () {
             $("#node-input-mode").on("change", function () {
